deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/purefield/ocp-virt.git'
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"ocp-virt-git:latest","namespace":"elastic-search-frontend"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ocp-virt-git\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  name: ocp-virt-git
  generation: 2
  labels:
    app: ocp-virt-git
    app.kubernetes.io/component: ocp-virt-git
    app.kubernetes.io/instance: ocp-virt-git
    app.kubernetes.io/name: ocp-virt-git
    app.kubernetes.io/part-of: elastic-search-front-end
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 20-minimal-ubi8
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ocp-virt-git
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ocp-virt-git
        deployment: ocp-virt-git
    spec:
      containers:
        - name: ocp-virt-git
          image: 'image-registry.openshift-image-registry.svc:5000/elastic-search-frontend/ocp-virt-git:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
